Add measure theoretic probability material

--- a/common/bib/mathmisc.bib
+++ b/common/bib/mathmisc.bib
@@ -1632,6 +1632,22 @@
   urlw         = {http://www.worldcat.org/isbn/9027718997},
   urla         = {http://www.amazon.com/dp/9027718997},
   }
+
+@book{trivedi2016,
+  isbn10       = {1119314208},
+  isbn         = {9781119314202},
+  title        = {Probability and Statistics with Reliability, Queuing, and Computer Science Applications},
+  author       = {Kishor S. Trivedi},
+  edition      = {2},
+  publisher    = {John Wiley \& Sons},
+  year         = {2016},
+  pages        = {880},
+  urlg         = {http://books.google.com/books?vid=ISBN1119314208},
+  }
+
+Length	880 pages
+
+
   
 @article{weyl1935,
   title        = {Emmy Noether},
