--- a/common/problatn.tex
+++ b/common/problatn.tex
@@ -6,19 +6,19 @@
 \chapter{Probability Space}
 \label{chp:prbspace}
 %======================================
-\qboxnps
-  {
-    Blaise Pascal (1623--1662), mathematician
-    \index{Pascal, Blaise}
-    \index{quotes!Pascal, Blaise}
-    \footnotemark
-  }
-  {../common/people/pascal.jpg}
-  {It is not certain that everything is certain.}
-  \footnotetext{\begin{tabular}[t]{ll}
-    quote: & \url{http://en.wikiquote.org/wiki/Blaise_Pascal} \\
-    image: & \url{http://en.wikipedia.org/wiki/Image:Blaise_pascal.jpg}
-  \end{tabular}}
+%20181104 used in prbspace%\qboxnps
+%20181104 used in prbspace%  {
+%20181104 used in prbspace%    Blaise Pascal (1623--1662), mathematician
+%20181104 used in prbspace%    \index{Pascal, Blaise}
+%20181104 used in prbspace%    \index{quotes!Pascal, Blaise}
+%20181104 used in prbspace%    \footnotemark
+%20181104 used in prbspace%  }
+%20181104 used in prbspace%  {../common/people/pascal.jpg}
+%20181104 used in prbspace%  {It is not certain that everything is certain.}
+%20181104 used in prbspace%  \footnotetext{\begin{tabular}[t]{ll}
+%20181104 used in prbspace%    quote: & \url{http://en.wikiquote.org/wiki/Blaise_Pascal} \\
+%20181104 used in prbspace%    image: & \url{http://en.wikipedia.org/wiki/Image:Blaise_pascal.jpg}
+%20181104 used in prbspace%  \end{tabular}}
 
 %=======================================
 \section{A generalized probability function}
