--- a/common/stats.tex
+++ b/common/stats.tex
@@ -25,26 +25,29 @@
 %=======================================
 The concept of the \hie{random variable} is widely used in probability and
 random processes.
-Before defining a random variable formally, note two things that a random variable is \emph{not}:\citetbl{
+Before what a random variable \emph{is}, note two things that a random variable is \emph{not} (next remark).
+%---------------------------------------
+\begin{remark}
+\citetbl{
   \citerpg{miller2006}{130}{0471458929},
-  \citerpg{feldman2010}{4}{3642051588}, %{``The name ``random variable" is actually a misnomer, since it is not random and not a variable.\ldots the random variable simply maps each point (outcome) in the sample space to a number on the real line\ldots Technically, the space into which the random variable maps the sample space may be more general than the real line\ldots"},
-  \citerpg{curry2011}{4}{3642166180}
+  \citerpgc{feldman2010}{4}{3642051588}{``The name ``random variable" is actually a misnomer, since it is not random and not a variable.\ldots the random variable simply maps each point (outcome) in the sample space to a number on the real line\ldots Technically, the space into which the random variable maps the sample space may be more general than the real line\ldots"},
+  \citerpg{curry2011}{4}{3642166180},
+  \citerpgc{trivedi2016}{2.1}{1119314208}{``The term ``random variable" is actually a misnomer, since a random variable $X$ is really a function whose domain is the sample space $S$, and whose range is the set of all real numbers, $\R$."}
   }
-\\\indentx\begin{tabular}{cl}
+%---------------------------------------
+As pointed out by others, the term ``random variable" is a ``misnomer":
+\\\rembox{
+  \begin{array}{NM}
     \imark & A random variable is {\bf not random}.\\
     \imark & A random variable is {\bf not a variable}.
-\end{tabular}\\
+  \end{array}}
+\end{remark}
+
 What is it then? It is a \structe{function} (next definition).
 In particular, it is a function that maps from an underlying stochastic process into $\R$.
 Any ``\prope{randomness}" (whatever that means) it may \emph{appear} to have comes from the stochastic process it 
 is mapping \emph{from}. But the function itself (the random variable itself) is very deterministic and well-defined.
 %
-%Before defining what a random variable is, here are two things that
-%it is not:
-%\begin{enume}
-%  \item A random variable is {\bf not random}.
-%  \item A random variable is {\bf not a variable}.
-%\end{enume}
 %A random variable is actually a \hie{function} $X(\omega)$, where
 %$\omega\in\pso$ is an outcome of an experiment.
 %More specifically, in a probability space $\ps$,
